--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,12 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/gameforum?characterEncoding=utf-8
-    username: root
-    password: root
+    url: jdbc:mysql://118.89.199.233:3306/gameforum?characterEncoding=utf-8
+    username: gameforum
+    password: root@forum
+#    url: jdbc:mysql://localhost:3306/gameforum?characterEncoding=utf-8
+#    username: root
+#    password: root
   application:
     name: gameforum
 mybatis-plus:
@@ -15,5 +18,7 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+#img:
+#  path: D:\gameforumImg\
 img:
-  path: D:\gameforumImg\
+  path: /www/wwwroot/default/GameServer/BBSImg/
